@@ -59,6 +59,16 @@ SaveAs.accelerator.other=ctrl shift S
 
 Save.confirmOverwrite=The file already exists.  Is it OK to overwrite it?
 
+RevertToSaved.name=Revert to Saved
+RevertToSaved.mnemonic=r
+# {0} is a chunk of HTML which adds the appropriate CSS.
+# {1} is the filename of the notebook.
+RevertToSaved.confirmationMessage=<html>{0}\
+  <b>Do you want to revert to the most recently saved version of the document "{1}"?</b><p>\
+  Your current changes will be lost.
+RevertToSaved.confirmation.revert=Revert
+RevertToSaved.confirmation.cancel=Cancel
+
 Close.name=Close
 Close.mnemonic=c
 Close.accelerator.mac=meta W
