@@ -9,6 +9,7 @@ Version X.X (XXXX-XX-XX)
      New: Added keyboard accelerators for Add Annotation and Add Sub-Region.
      New: Added Window menu on Mac OS X.
      New: Added Open Recent menu.
+     New: Added Revert to Saved.
 
    Fixed: NullPointerException for new notebooks due to a lack of annotations.
    Fixed: Various application behaviour issues for Mac OS X.
